--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "sjrk-couch-config": "https://github.com/waharnum/fluid-couch-config#viewsFix",
     "sjrk-story-telling": "git+https://github.com/BlueSlug/sjrk-story-telling.git",
     "sjrk-storytelling": "https://github.com/BlueSlug/sjrk-story-telling",
-    "uuid": "3.1.0"
+    "uuid": "3.1.0",
+    "multer": "1.3.0"
   },
   "devDependencies": {
     "eslint-config-fluid": "1.1.0",
