SJRK-56-learningReflections: add volume for upload persistence.

--- a/docker-compose.cloud.yml
+++ b/docker-compose.cloud.yml
@@ -5,6 +5,7 @@ services:
       - "${APP_SERVER_PORT}:8081"
     volumes:
       - "${APP_SERVER_SECRETS_FILE}:/usr/src/app/secrets.json"
+      - "${APP_SERVER_UPLOADS_DIRECTORY}:/usr/src/app/uploads"
   db:
     volumes:
       - "${COUCHDB_DATADIR}:/opt/couchdb/data"
