--- a/docker-compose.cloud.yml
+++ b/docker-compose.cloud.yml
@@ -1,11 +1,13 @@
 version: '3'
 services:
   app:
+    restart: always
     ports:
       - "${APP_SERVER_PORT}:8081"
     volumes:
       - "${APP_SERVER_SECRETS_FILE}:/usr/src/app/secrets.json"
       - "${APP_SERVER_UPLOADS_DIRECTORY}:/usr/src/app/uploads"
   db:
+    restart: always
     volumes:
       - "${COUCHDB_DATADIR}:/opt/couchdb/data"
